<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Základy Androidu</string>
    <string name="activity_about_name">O aplikaci</string>
    <string name="action_1">Akce 1</string>
    <string name="action_2">Akce 2</string>
    <string name="action_3">Akce 3</string>
    <string name="action_4">Akce 4</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_ulozit">Uložit</string>
    <string name="label_nazev">Název poznámky</string>
    <string name="label_obsah">Zadejte text poznámky</string>
    <string name="label_enter_text">Zadejte text</string>
    <string name="label_smazat">Smazat</string>
    <string name="label_pridat">Přidat</string>
    <string name="label_odebrat">Odebrat</string>
    <string name="label_odeslat">Odeslat</string>
    <string name="label_start_activity">Předat aktivitě</string>
    <string name="label_return_to_activity">Předat rodičovské aktivitě</string>
    <string name="label_share">Sdílet</string>
    <string name="label_prijata_zprava">Přijatá zpráva:</string>
    <string name="label_enter_url">Zadejte URL</string>
    <string name="label_set_msg_for_parent_activity">Vložte zprávu pro rodičovskou aktivitu</string>
    <string name="toast_smazat">Smazáno</string>
    <string name="label_frame"><b>Toto je Frame Layout</b></string>
    <string name="uvitani">Dobrý den, %1$s! Máte %2$d nových zpráv.</string>
    <string name="uvozovky">Takto \"lze vložit uvozovky\"</string>
    <string name="dlg_title">Ukončení aplikace</string>
    <string name="dlg_title_processing">Zpracovávám data...</string>
    <string name="dlg_msg_processing">Prosím čekejte, právě probíhá náročná operace na pozadí</string>
    <string name="dlg_msg">Vyberte ano pro ukončení aplikace</string>
    <string name="dlg_btn_yes">Ano</string>
    <string name="dlg_btn_no">No</string>
    <string name="dlg_btn_cancel">Cancel</string>
    <string name="dlg_btn_ok">OK</string>
    <string name="empty_list">Prázdný seznam</string>
    <string name="basic_view">Základní</string>
    <string name="advanced_view">Pokročilé</string>
    <string name="default_url">https://www.google.cz/</string>
    <string name="malformed_url">Neplatná URL adresa!</string>
    <string name="label_enter_address">Zadejte adresu</string>

    <!-- Action bar -->
    <string name="action_bar_title">ActionBar </string>
    <string name="action_rotate">Otočení</string>
    <string name="action_call">Telefon</string>
    <string name="action_camera">Kamera</string>
    <string name="action_share">Sdílet</string>
    <string name="action_search">Hledat</string>
    <string name="action_help">O aplikaci</string>

    <!-- Action bar webview -->
    <string name="action_load">Načíst</string>
    <string name="action_back">Zpět</string>
    <string name="action_forward">Vpřed</string>
    <string name="action_home">Domů</string>

    <!-- Action bar mapview -->
    <string name="action_normal_map">Normální</string>
    <string name="action_satellite_map">Satelitní</string>
    <string name="action_terrain_map">Terénní</string>

    <!-- Action bar intents -->
    <string name="action_list_activity">Zobrazit seznam</string>
    <string name="action_intent_share">Sdílet zprávu</string>
    <string name="action_start_for_result">Předat a získat výsledek</string>
    <string name="action_service">Spustit službu</string>
    <string name="action_browser">Spustit prohlížeč</string>
    <string name="action_take_photo">Vyfotit</string>
    <string name="action_send_inent_static">Pošli Intent Static</string>
    <string name="action_send_inent_dynamic">Pošli Intent Dynamic</string>
    <string name="action_send_notification">Zobraz notifikaci</string>

    <!-- Action bar notifications -->
    <string name="action_show_normal_notification">Normální notifikace</string>
    <string name="action_show_big_notification">Velká notifikace</string>
    <string name="action_show_notification_progress">Notifikace s progres barem</string>
    <string name="action_show_notification_activity">Notifikace s activity indikátorem</string>
    
    <!-- Action bar services -->
    <string name="action_start_service">Spustit službu</string>
    <string name="action_stop_service">Zastavit službu</string>
    <string name="action_start_foreground">Spustit foreground službu</string>
    <string name="action_stop_foreground">Zastavit foreground službu</string>
    <string name="action_start_intent_service">Spustit IntentService</string>
     
    <!-- Action bar remote service -->
    <string name="action_start_remote_service">Spustit vzdálenou službu</string>
    <string name="action_stop_remote_service">Zastavit vzdálenou službu</string>
    
    <!-- Action bar asynchronous -->
    <string name="action_start_worker">Spustit pracovní vlákno</string>
    <string name="action_start_async_task">Spustit Asynctask</string>
    <string name="action_stop_async_task">Zrušit Asynctask</string>
    <string name="action_start_loader">Spustit Loader</string>
      
    <string-array name="mesta_array">
        <item>Praha</item>
        <item>Brno</item>
        <item>Ostrava</item>
        <item>Olomouc</item>
        <item>Opava</item>
        <item>Pardubice</item>
        <item>Plzeň</item>
    </string-array>

    <plurals name="numberOfCars">
        <item quantity="one">Ve Vaší garáži je jeden automobil</item>
        <item quantity="few">Ve Vaší garáži jsou %d automobily</item>
        <item quantity="other">Ve Vaší garáži je %d automobilů</item>
    </plurals>

    <string-array name="view_types">
        <item>TextView</item>
        <item>Button</item>
        <item>CheckBox</item>
        <item>RadioButton</item>
        <item>CheckedTextView</item>
        <item>Spinner</item>
        <item>ProgressBar</item>
        <item>RatingBar</item>
        <item>SeekBar</item>
        <item>Switch</item>
        <item>EditText</item>
        <item>ImageView</item>
        <item>ImageButton</item>
        <item>WebView</item>
        <item>MapView</item>
        <item>VideoView</item>
        <item>TimePicker</item>
    </string-array>

    <string name="scroll_view_info">Potomek třídy FrameLayout, což znamená, že je určen pro vložení jednoho dětského view.
Dětské view může být libovolně složitý layout libovolného typu, nebo jednoduché View, obecně každý potomek třídy View.
Pokud je dětské view větší, než rozměry ScrollView, automaticky se zobrazí scroll bar a obsah lze posouvat.
Umožňuje pouze vertikální posuv, potřebujete-li horizontální posuv, použijte třídu HorizontalScrollView
Typické použití je ve spojení s lineárním layoutem
Nikdy nepoužívejte kombinaci ScrollView a ListView (viz další lekce), každý z těchto prvků má svou implementaci vertikálního posuvu na úplně jiném principu. Pro začátečníka nemusí být rozdíl mezi ScrollView a ListView příliš zřejmý. Oba prvky přece zajišťují vertikální posuv obsahu po displeji. Rozdíl tu však je a to značný. ScrollView vždy načítá celý svůj obsah, kdežto ListView pouze tehdy, je-li potřeba ho skutečně zobrazit uživateli, čehož dosahuje pomocí tzv. Adaptéru, který, spolu s ListView, podrobně prozkoumáte v příští lekci.
Hlavním nežádoucím důsledkem kombinace ScrollView a ListView by bylo, že byste zcela obešli optimalizace třídy ListView při zobrazování velkého množství položek. De-facto by tak ListView vyplnil ScrollView, jeho všechny položky by byly viditelné, což by mělo za následek značné snížení odezvy a v případě obrázků velmi pravděpodobně i OutOfMemory výjimky.</string>
    <string name="label_about"><b>e-learningový kurz\n\n Vývoj nativních aplikaci pro platformu Android \n web: www.integra-it.cz \n email: info@integra-it.cz \n\n Copyright 2014</b></string>

</resources>