<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionStartListActivity"
        android:orderInCategory="0"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_list_activity"/>
    <item
        android:id="@+id/actionIntentShare"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_intent_share"/>
    <item
        android:id="@+id/actionStartForResult"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_start_for_result"/>
    <item
        android:id="@+id/actionStartService"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_service"/>
    <item
        android:id="@+id/actionStartBrowser"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_browser"/>
    <item
        android:id="@+id/actionStartCamera"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_take_photo"/>
    <item
        android:id="@+id/actionSendIntentStatic"
        android:orderInCategory="6"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_send_inent_static"/>
    <item
        android:id="@+id/actionSendIntentDynamic"
        android:orderInCategory="7"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_send_inent_dynamic"/>
</menu>