<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionShowNormalNotification"
        android:orderInCategory="0"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_show_normal_notification"/>
    <item
        android:id="@+id/actionShowBigNotification"
        android:orderInCategory="0"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_show_big_notification"/>
    <item
        android:id="@+id/actionShowNotificationProgress"
        android:orderInCategory="0"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_show_notification_progress"/>
        <item
        android:id="@+id/actionShowNotificationActivity"
        android:orderInCategory="0"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_show_notification_activity"/>
</menu>