<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/akce1"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/action_1"/>
    <item
        android:id="@+id/akce2"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_2">
        <menu>
            <group android:id="@+id/group" >
                <item
                    android:id="@+id/akce3"
                    android:icon="@drawable/ic_launcher"
                    android:orderInCategory="2"
                    android:showAsAction="never"
                    android:title="@string/action_3"/>
                <item
                    android:id="@+id/akce4"
                    android:icon="@drawable/ic_launcher"
                    android:orderInCategory="3"
                    android:showAsAction="never"
                    android:title="@string/action_4"/>
            </group>
        </menu>
    </item>
</menu>