<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editTextNazev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_nazev"
        android:inputType="textCapSentences" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextObsah"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/label_obsah"
        android:inputType="textCapSentences" />
    
    <Button
        android:id="@+id/buttonSmazat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/label_smazat" />
    
    <Button
        android:id="@+id/buttonUlozit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/label_ulozit" />

</LinearLayout>