<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editTextMsgToSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/label_enter_text"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewReceivedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/label_prijata_zprava"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/label_odeslat"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewReceived"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonSend"
        android:layout_below="@+id/textViewReceivedLabel"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

</RelativeLayout>